# deployment-server

./: .env.sample  .gitignore  CHANGELOG.md  README.md  cog.toml  config_testing.yaml  pyproject.toml
.github/workflows/: release.yml
config/: config.yaml
src/deployment_server/: __main__.py  app.py  beat.py  cli.py  config.py  constants.py  containers.py  dependencies.py  init.py  models.py  server.py  worker.py
src/deployment_server/containers/: common.py  server.py  worker.py
src/deployment_server/core/: git.py  github.py  py.py  systemd.py  urlextra.py
src/deployment_server/db/migrations/: 20250610062322_initial.sql  20250713104101_project_secrets.sql  20250803203542_deployment_status.sql
src/deployment_server/deployer/: py.py
src/deployment_server/modules/: acme.py  env.py  nginx.py
src/deployment_server/repositories/: deployment.py  project.py
src/deployment_server/routers/: deployment.py  health.py  on_release.py  project.py
src/deployment_server/services/: deployment.py  project.py
src/deployment_server/tasks/: run_deployment.py
src/deployment_server/utils/: converters.py  fastapi_extra.py  git.py  github.py  url_extra.py  validators.py
tests/: conftest.py  dump_schema.py  test_config.py
tests/core/: test_git.py  test_urlextra.py
tests/modules/: test_acme.py  test_nginx.py
tests/routers/: test_deployment.py  test_project.py
tests/tasks/: test_run_deployment.py
tests/utils/: test_converters.py  test_extractors.py  test_generators.py  test_git.py  test_url_extra.py  test_validators.py
