[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "deployment-server"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Murat Gözel", email = "murat@gozel.com.tr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyyaml",
  "dependency-injector",
  "uvicorn[standard]",
  "fastapi[standard]",
  "pydantic",
  "psycopg2-binary",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "postmarker",
  "celery[librabbitmq]",
  "nanoid",
  "GitPython",
  "Jinja2",
  "python-slugify[unidecode]",
  "click"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pre-commit",
  "httpx"
]

[project.urls]
Documentation = "https://github.com/muratgozel/deployment-server#readme"
Issues = "https://github.com/muratgozel/deployment-server/issues"
Source = "https://github.com/muratgozel/deployment-server"

[project.scripts]
deployer = "deployment_server.cli:main"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.envs.dev]
features = [
  "dev",
]

[tool.hatch.envs.dev.scripts]
test = "APPLICATION_MODE=testing pytest {args}"
test-cov = "pytest --cov-report=term-missing --cov={args}"
migrate = "DATABASE_URL=postgresql://postgres:emmastone@localhost:5432/deployment_server?sslmode=disable dbmate --wait -d src/deployment_server/db/migrations/ up"
server = "python -m deployment_server.server"

[tool.hatch.envs.dev.env-vars]
APPLICATION_CONFIG_DIR = "~/deployment-server-25"
APPLICATION_MODE = "default"
APPLICATION_SERVER_PORT = "8000"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/deployment_server tests}"

[tool.coverage.run]
source_pkgs = ["deployment_server", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
deployment_server = ["src/deployment_server", "*/deployment-server/src/deployment_server"]
tests = ["tests", "*/deployment-server/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
